fixed modal on mobile, some styling tweaks, refactoring some CSS

--- a/src/styles/_carousel-video.scss
+++ b/src/styles/_carousel-video.scss
@@ -2,6 +2,21 @@
   position: relative;
   overflow: hidden;
 
+  @include media-md {
+    &:hover {
+      .play-toggle,
+      .mute-toggle,
+      .fullscreen-toggle {
+        opacity: 1;
+      }
+
+      .carousel-video__info {
+        bottom: 0;
+        opacity: 1;
+      }
+    }
+  }
+
   &__overlay {
     position: absolute;
     top: 0;
@@ -11,7 +26,7 @@
 
     z-index: 10;
 
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.85);
     opacity: 1;
 
     transition: all 0.3s ease-in-out;
@@ -34,6 +49,11 @@
     
     background: linear-gradient(to bottom, black, transparent);
     padding: 10px;
+
+    @include media-md {
+      background: none;
+      padding: 0;
+    }
 
     &.active {
       display: block;
@@ -69,6 +89,10 @@
   &__controls {
     display: flex;
     justify-content: space-between;
+
+    @include media-md {
+      z-index: 20;
+    }
   }
 
   .play-toggle,
@@ -80,64 +104,10 @@
     color: $white;
 
     font-size: 1.8rem;
-  }
 
-  .mute-toggle,
-  .fullscreen-toggle {
-    margin-left: 12px;
-  }
-
-  &__info {
-    text-align: center;
-
-    letter-spacing: 0.3px;
-    color: $white;
-
-    .title {
-      font-size: 2.4rem;
-      text-transform: uppercase;
-      color: $accent;
-    }
-
-    .description {
-      font-weight: 300;
-      margin-top: 2px;
-    }
-  }
-
-  @include media-md {
-    &:hover {
-      .play-toggle,
-      .mute-toggle,
-      .fullscreen-toggle {
-        opacity: 1;
-      }
-
-      .carousel-video__info {
-        bottom: 0;
-        opacity: 1;
-      }
-    }
-
-    &__overlay-content {
-      background: none;
-      padding: 0;
-    }
-
-    &__controls {
-      z-index: 20;
-    }
-
-    .play-toggle,
-    .mute-toggle,
-    .fullscreen-toggle,
-    &__info {
+    @include media-md {
       position: absolute;
-    }
 
-    .play-toggle,
-    .mute-toggle,
-    .fullscreen-toggle {
       opacity: 0;
 
       transition: all 0.3s ease-in-out;
@@ -152,34 +122,54 @@
         color: $accent;
       }
     }
+  }
 
-    .play-toggle {
+  .mute-toggle,
+  .fullscreen-toggle {
+    margin-left: 12px;
+
+    @include media-md {
+      top: 10px;
+      right: 8px;
+      z-index: 30;
+
+      font-size: 2rem;
+    }
+  }
+
+  .fullscreen-toggle {
+    display: none;
+
+    @include media-md {
+      display: block;
+    }
+  }
+
+  .play-toggle {
+    @include media-md {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
 
       font-size: 4rem;
     }
+  }
 
-    .mute-toggle,
-    .fullscreen-toggle {
-      top: 10px;
-      right: 8px;
-      z-index: 30;
-
-      font-size: 2rem;
-
-      @include media-md {
-        bottom: 10px;
-        top: auto;
-      }
-    }
-
-    .mute-toggle {
+  .mute-toggle {
+    @include media-md {
       right: 48px;
     }
+  }
 
-    &__info {
+  &__info {
+    text-align: center;
+
+    letter-spacing: 0.3px;
+    color: $white;
+
+    @include media-md {
+      position: absolute;
+
       bottom: -50%;
       left: 0;
       right: 0;
@@ -195,11 +185,35 @@
       text-align: left;
 
       transition: all 0.4s ease-in-out;
+    }
 
-      .title {
+    .title {
+      font-size: 2.4rem;
+      text-transform: uppercase;
+      color: $accent;
+
+      @include media-md {
         font-size: 3rem;
         text-shadow: 0 0 18px rgba(0,0,0,1);
       }
     }
+
+    .description {
+      font-weight: 300;
+      margin-top: 2px;
+    }
+  }
+
+  @include media-md {
+
+
+    // .mute-toggle,
+    // .fullscreen-toggle {
+      
+
+    //   @include media-md {
+    //     bottom: 10px;
+    //     top: auto;
+    //   }
   }
 }
