--- a/src/styles/_contact-form.scss
+++ b/src/styles/_contact-form.scss
@@ -46,6 +46,7 @@
 
       border: none;
       border-bottom: solid 2px $black;
+      border-radius: 0;
 
       font-family: $accentFont;
       font-size: 1.4rem;
