--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -63,7 +63,6 @@
     .fa-play,
     .fa-play-circle {
       color: $accent;
-      font-size: 3rem;
 
       transform: scale(1);
       transition: 0.3s ease-in-out;
@@ -75,6 +74,7 @@
 
     .fa-play {
       display: none;
+      font-size: 3rem;
       
       @include media-md {
         display: block;
@@ -82,6 +82,7 @@
     }
 
     .fa-play-circle {
+      font-size: 4rem;
       @include media-md {
         display: none;
       }
