--- a/src/styles/_work-item.scss
+++ b/src/styles/_work-item.scss
@@ -17,8 +17,6 @@
     bottom: 0;
     right: 0;
 
-    max-height: 80vh;
-
     background: $white;
 
     opacity: 1;
@@ -68,7 +66,15 @@
     }
   }
 
+  &__header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
   h2 {
+    margin-right: 8px;
+    
     font-weight: 400;
     font-size: 2.4rem;
     color: $accent;
@@ -103,11 +109,6 @@
   }
 
   &__status {
-    position: relative;
-    bottom: 2px;
-    
-    margin-left: 7px;
-
     color: red;
     font-size: 1.5rem;
     font-family: $accentFont;
@@ -117,7 +118,7 @@
   }
 
   h3 {
-    margin-bottom: 6px;
+    margin-bottom: 18px;
 
     font-size: 2rem;
     font-weight: 400;
